fixed some layout issues

--- a/css-components/book-detail.css
+++ b/css-components/book-detail.css
@@ -168,8 +168,13 @@ main {
         text-align: center;
     }
     .book-author {
-        border-bottom: none;
+        width: 100%;
         font-size: 1.4rem;
+        text-align: center;
+        border-bottom: none;
+        border-bottom: 2px solid var(--border-color);
+        padding-bottom: 10px;
+        margin-bottom: 5px;
     }
     #main-image {
         object-fit: contain;
